versioned_docs/version-7.4.0/api/coordAll.mdx
---
title: coordAll
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Get all coordinates from any GeoJSON object.

### Parameters

| Name    | Type                                            | Description        |
| ------- | ----------------------------------------------- | ------------------ |
| geojson | **[AllGeoJSON](docs/api/types/AllGeoJSON.mdx)** | any GeoJSON object |

### Returns

**[Array](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Array)&lt;[Array](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Array)&lt;[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)&gt;&gt;** coordinate position array

### Examples

```javascript
var features = turf.featureCollection([
  turf.point([26, 37], { foo: "bar" }),
  turf.point([36, 53], { hello: "world" }),
]);

var coords = turf.coordAll(features);
//= [[26, 37], [36, 53]]
```

### Installation

```javascript
$ npm install @turf/meta

import { coordAll } from "@turf/meta";
const result = coordAll(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.coordAll(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
